# QOASIS

./: CMakeLists.txt  DocumentRoot.cmake  HOWTOBUILD.TXT  QRTF_Read.pro  README.md  Scratchy_note  _macosx_bash_profie.txt  headerlist.txt  rtfsrc.pri  sourcelist.txt
demo/: demo.txt  main.cpp  rtfdemo.cpp  rtfdemo.h
final/QtOasi/: .qmake.conf  LICENSE  clean.sh  sync.profile
final/oasi/: .qmake.conf  oasi.pro  qmake.conf  sync.profile
init/: ScreenSaver.cpp  qtavlink.txt  sharedlib_have.txt  static_lib.txt
src/: CMakeLists.txt  doc_oasi_export.h  dochandler.cpp  dochandler.h  documentsession.cpp  documentsession.h  docx.pri  libapi.cpp  rtfreader_export.h  rtfsrc.pri
src/app/: CMakeLists.txt  Copysheet.txt  Info.plist  buildrcc.sh  clean.sh  copy_session  doc_session.cpp  doc_session.h  editorkernel.cpp  editorkernel.h  editortable_setting.cpp  editortable_setting.h  editvoiceblock.cpp  editvoiceblock.h  imageedit.cpp  imageedit.h  main.cpp  oasi_application.cpp  oasi_application.h  oasimain.cpp  oasimain.h  oasispeech.qrc  package_mac.sh  src.pro  textedit.qrc  ui_forms.h  voiceprocesing.cpp  voiceprocesing.h  worker.cpp  worker.h
src/app/cmake/: DeployQt5.cmake  ECMGeneratePriFile.cmake  FindOS.cmake  FindPopplerQt5.cmake  Qt5CoreConfig.cmake  Qt5PdfiumConfig.cmake  Qt5PdfiumConfigVersion.cmake  Qt5PrintSupportConfig.cmake  Qt5TextToSpeechConfig.cmake  Qt5TextToSpeechConfigVersion.cmake
src/app/images/: audioconv.xcf
src/ebook/: common.pri  fbreader_build_mac.patch  file_ebook.pri  note
src/ebook/fbreader/fbreader/fbreader/src/formats/html/: HtmlBookReader.cpp  HtmlReader.h
src/ebook/fbreader/fbreader/zlibrary/core/src/filesystem/: ZLFile.cpp
src/ebook/fbreader/fbreader/zlibrary/text/src/model/: ZLTextParagraph.h
src/lib/oasidoc/: CMakeLists.txt  OdtFormat  QmyDom.cpp  QmyDom.h  RTFFormat  core_htmldriver.cpp  core_htmldriver.h  gzipreader.h  include.pri  kzip copia.h  kzip.cpp  odt.pri  rtfsrc.pri  src_lib.pro  zipdoc.cpp  zipdoc.h  zlib.pri
src/lib/oasidoc/epub/: econverter.cpp  econverter.h  edocument.cpp  edocument.h  notepark.txt
src/lib/oasidoc/epub/libepub/: zipconf.h
src/lib/oasidoc/ooo/: README_USE_CONVERT.txt  converter.cpp  converter.h  document.cpp  document.h  formatproperty.cpp  manifest.cpp  manifest.h  styleparser.cpp  styleparser.h
src/lib/oasidoc/rtf-qt/: AbstractRtfOutput.h  AuthorPcdataDestination.h  CategoryPcdataDestination.h  ColorTableDestination.h  CommentPcdataDestination.h  CompanyPcdataDestination.h  Destination.h  DocumentCommentPcdataDestination.h  DocumentDestination.h  FontTableDestination.h  FontTableEntry.h  GeneratorPcdataDestination.h  HLinkBasePcdataDestination.h  IgnoredDestination.h  InfoCreatedTimeDestination.h  InfoDestination.h  InfoPrintedTimeDestination.h  InfoRevisedTimeDestination.h  InfoTimeDestination.h  KeywordsPcdataDestination.h  ManagerPcdataDestination.h  OperatorPcdataDestination.h  PcdataDestination.h  PictDestination.h  RtfGroupState.h  StyleSheetDestination.h  StyleSheetTableEntry.h  SubjectPcdataDestination.h  TextDocumentRtfOutput.h  TitlePcdataDestination.h  Token.h  Tokenizer.h  UserPropsDestination.h  controlword.h  doc_oasi_export.h  rtfreader.h
src/lib/qcld2/: CMakeLists.txt  README.md  cld2.pri  config.h.in  datalanguageprovider.cpp  datalanguageprovider.h  qcld2.pro  qtrlocale.cpp  qtrlocale.h
src/lib/qcld2/include_cld2/: datalanguageprovider.h  integral_types.h  qtrlocale.h
src/lib/qcld2/internal/: cld_generated_cjk_uni_prop_80.cc
src/lib/qcld2/source_cld2/: datalanguageprovider.cpp  qtrlocale.cpp  scoreonescriptspan.cc
src/lib/qt_archive/: CMakeLists.txt  k7zip.cpp  k7zip.h  kar.h  karchive_p.h  karchivedirectory.h  karchivefile.h  kbzip2filter.h  kcompressiondevice.cpp  kcompressiondevice.h  kgzipfilter.h  klimitediodevice_p.h  knonefilter.h  krcc.cpp  krcc.h  ktar.h  kxzfilter.h  kzip.h  kzipfileentry.h
src/rtf-qt/: FontTableDestination.h  FontTableEntry.h  HLinkBasePcdataDestination.h  IgnoredDestination.h  InfoPrintedTimeDestination.h  InfoRevisedTimeDestination.h  InfoTimeDestination.h  PcdataDestination.h  PictDestination.h  RtfGroupState.h  StyleSheetTableEntry.h  TextDocumentRtfOutput.cpp  TextDocumentRtfOutput.h  controlword.h  rtfreader.h
src/xml/oo_read/: KoXmlStreamReader.cpp  KoXmlStreamReader.h  KoXmlUtils.h  NEWS  Odf2Debug.h  core_zip.cpp  core_zip.h  karchive.cpp  karchive.h  karchive.pri  kostore_export.h  kounit.cpp  kounit.h  oo_config.h  oo_read.pri
src/xml/oo_read/element/: CMakeLists.txt  KoCell.h  KoCellStyle.h  KoColumn.h  KoColumnStyle.h  KoFontFace.cpp  KoFontFace.h  KoOdfGraphicProperties.h  KoOdfHeaderFooterProperties.h  KoOdfListLevelProperties.h  KoOdfListStyle.h  KoOdfPageLayout.h  KoOdfPageLayoutProperties.h  KoOdfParagraphProperties.h  KoOdfStyle.h  KoOdfStyleBase.h  KoOdfStyleManager.cpp  KoOdfStyleManager.h  KoOdfStyleProperties.h  KoOdfTextProperties.h  KoRawCellChild.h  KoRow.h  KoRowStyle.h  KoStyle.h  KoTable.h  KoTblStyle.h  koborder.cpp  koborder.h  kogenstyle.cpp  kogenstyle.h  kogenstyles.cpp  kogenstyles.h  kostylestack.cpp  kostylestack.h
src/xml/oo_read/element/chart/: KoOdfChartWriter.h
src/xml/oo_read/karchive/: karchive.h  zipunzip.cpp
src/xml/oo_read/store/: KoOdfWriteStore.cpp  KoOdfWriteStore.h  KoStore.cpp  KoStore.h  KoStoreDevice.h  KoTarStore.cpp  KoXmlNS.h  KoZipStore.cpp  StoreDebug.h  gzipreader.h  gzipwriter.h
src/xslt/fo/: borders.xsl  datasources.xml  images.xsl  ooo2xslfo-writer.xsl  padding.xsl  styles.xml
src/xslt/fo/fopconfig/: fop.xml  fopfonts.xml
src_lib/: QmyDom.h
src_lib/epub/: econverter.cpp  econverter.h  edocument.cpp  notepark.txt
src_lib/ooo/: README.md  README_USE_CONVERT.txt  converter.cpp  converter.h  document.cpp  document.h  formatproperty.h  manifest.cpp  styleinformation.cpp  styleinformation.h  styleparser.cpp
test/control_m/: ControlFrame.qml  fontplay.c  fontplay.xcf  run.sh  utils.js
test/dkernel/: .qmake.stash  app_resource.qrc  clean.sh  core_application.cpp  core_application.h  core_mainwindow.cpp  (+7 more)
tmp/: TextDocumentRtfOutput.cpp  TextDocumentRtfOutput.h
(+90 files in other folders)
